# stargazer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
prisma/: schema.prisma
src/: main.rs  prisma.rs
src/auth/: auth_backend.rs  auth_user.rs  mod.rs
src/dto/: login.rs  register.rs
src/openapi/: api_document.rs  api_error.rs  api_result.rs  mod.rs
src/routes/: auth.rs
src/test/: index.rs
