[package]
name = "stargazer"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.14.2", features = ["scalar", "axum-json", "macros"] }
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
schemars = { version = "0.8.10", features = ["uuid1"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
