[package]
name = "stargazer"
version = "0.1.0"
edition = "2024"
default-run = "stargazer"

[dependencies]
aide = { version = "0.14.2", features = ["scalar", "axum-json", "macros"] }
axum = { version = "0.8.1", features = ["macros", "tracing"] }
axum-login = "0.17.0"
password-auth = "1.0.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "sqlite",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "sqlite",
] }
schemars = { version = "0.8.22", features = ["uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.88"
chrono = "0.4.40"
