[package]
name = "stargazer"
description = "The server portion of Starlight 🚀🔥"
version = "0.1.0"
homepage = "https://github.com/starlight-the-game/stargazer"
license = "MIT"
authors = [
    "Tien Dat Pham <dat20036@gmail.com>"
]
default-run = "stargazer"
edition = "2024"
publish = false

[dependencies]
aide = { version = "0.14.2", features = ["scalar", "axum-json", "macros"] }
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["macros", "tracing"] }
axum-login = "0.17.0"
chrono = "0.4.40"
http-body-util = "0.1.3"
password-auth = "1.0.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "sqlite",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "sqlite",
] }
schemars = { version = "0.8.22", features = ["uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
